src/objects/Team__c.object
<CustomObject>
    <description>This object will contain all sales data for teams.</description>
    <fields>
        <fullName>AUM__c</fullName>
        <label>AUM</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Branch_Sales__c</fullName>
        <label>Branch Sales</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Teams</relationshipLabel>
        <relationshipName>Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Firm_Sales__c</fullName>
        <label>Firm Sales</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MDM_ID__c</fullName>
        <externalId>true</externalId>
        <label>MDM ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Will contain the preferred product information for teams.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Teams</relationshipLabel>
        <relationshipName>Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rep_Individual__c</fullName>
        <label>Rep/ Individual</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Location__c</fullName>
        <label>Team Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Team_Sales__c</fullName>
        <label>Team Sales</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Team_Website__c</fullName>
        <description>This field contains the team website.</description>
        <encrypted>true</encrypted>
        <label>Team Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Total_Sales__c</fullName>
        <label>Total Sales</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD__c</fullName>
        <label>YTD Sales</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Team</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>